--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: AVA-Seenu/Testing/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/For dockerhub:latest
